💄 footer, fix reset right side resize gap

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -13,6 +13,11 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-direction: row;
+        @media (max-width: map.get(config.$breakpoints, 'sm')) {
+            flex-direction: column;
+            align-items: flex-start;
+        }
     }
     a {
         color: var(--color-bg);
