--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -11,7 +11,6 @@
         hyphens: auto;
         background-color: var(--color-primary);
         color: var(--color-dark);
-        transform: background-color .5s ease-in-out;
         padding-top: map.get(config.$scale, 300);
         padding-bottom: map.get(config.$scale, 300);
     }
