--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -56,3 +56,7 @@ a {
     background-color: var(--color-selection);
     color: var(--color-on-selection);
 }
+
+.updates__list {
+    list-style: disc;
+}
